--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -42,6 +42,27 @@
                     </ul>
                 </div>
             </nav>
+
+            <div class="sidebar__bibli">
+                <header class="header">
+                    <div>
+                       <button>
+                            <span class="fa fa-search"></span>
+                            <span>Sua Biblioteca</span>
+                       </button>
+                    </div>
+                    <div class="plus">
+                        <button>
+                            <span class="fa fa-plus"></span>
+                        </button>
+                    </div>
+                </header>
+
+                <div>
+                    
+                </div>
+            </div>
+
         </div>
     </body>
     </html>
