--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -25,44 +25,55 @@
                         <img src="./assets/icons/logo-spotify.png" alt="logotipo em branco do Spotify">
                     </a>
                 </div>
-                <div>
-                    <ul>
-                        <li>
-                            <a href="">
-                                <span class="fa fa-home"></span>
-                                <span>Início</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span class="fa fa-search"></span>
-                                <span>Buscar</span> 
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa fa-home"></span>
+                            <span>Início</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="fa fa-search"></span>
+                            <span>Buscar</span> 
+                        </a>
+                    </li>
+                </ul>
             </nav>
 
-            <div class="sidebar__bibli">
-                <header class="header">
-                    <div>
-                       <button>
-                            <span class="fa fa-search"></span>
-                            <span>Sua Biblioteca</span>
-                       </button>
-                    </div>
-                    <div class="plus">
-                        <button>
-                            <span class="fa fa-plus"></span>
-                        </button>
-                    </div>
-                </header>
+            <!-- Aula 02 -->
 
-                <div>
-                    
+            <div class="library">
+                <div class="library__content">
+                    <button class="library__button">
+                        <span class="fa fas fa-book"></span>
+                        <span>Sua biblioteca</span>
+                    </button>
+                    <span class="fa fa-plus"></span>    
                 </div>
-            </div>
 
+                <section class="section-playlist">
+                    <div class="section-playlist__content">
+                        <span class="text title">Crie sua primeira playlist</span>
+                        <span class="text subtitle">É fácil, vamos te ajudar</span>
+                        <button class="section-playlist__button">
+                            <span>Criar playlist</span>
+                        </button>
+                    </div>  
+                </section>
+
+                <div class="cookies">
+                        <a href="">Cookies</a>
+                </div>
+
+                <div class="languages">
+                    <button class="languages__button">
+                        <span class="fa fa-globe"></span>
+                        <span>Português do Brasil</span>
+                    </button>
+                </div>
+
+            </div>
         </div>
-    </body>
+    </body> 
     </html>
