--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -6,9 +6,13 @@
         <title>Spotify</title>
 
         <!-- Reset Css -->
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="src/styles/reset.css">
+        <!-- Vars Css -->
+        <link rel="stylesheet" href="src/styles/vars.css">
         <!-- Css -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="src/styles/style.css">
+        <!-- main content.css -->
+         <link rel="stylesheet" href="src/styles/main-content.css">
         <!-- Fonte Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
@@ -17,12 +21,13 @@
 
     </head>
     <body>
-        
+            <!-- Aula 01 -->
+
         <div class="sidebar">
             <nav class="sidebar__navigation">
                 <div class="logo">
                     <a href="">
-                        <img src="./assets/icons/logo-spotify.png" alt="logotipo em branco do Spotify">
+                        <img src="src/assets/icons/logo-spotify.png" alt="logotipo em branco do Spotify">
                     </a>
                 </div>
                 <ul>
@@ -75,5 +80,36 @@
 
             </div>
         </div>
+
+            <!-- Aula 03 -->
+
+            <main>
+                <div class="main-container">
+                    <nav class="header__navigation">
+                        <div class="navigation">
+                            <button class="arrow-left">
+                                <img src="src/assets/icons/small-left.png" alt="Seta esquerda">
+                            </button>
+                            <button class="arrow-right">
+                                <img src="src/assets/icons/small-right.png" alt="Seta direita">
+                            </button>
+
+                        </div>
+
+                        <div class="header__search">
+                            <img src="src/assets/icons/search.png" alt="">
+                            <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?">
+                        </div>
+
+                        <div class="header__login">
+                            <button class="subscrbie">Inscreva-se</button>
+                            <button class="login">Entrar</button>
+
+                        </div>
+
+                    </nav>
+                </div>
+            </main>
+
     </body> 
     </html>
