--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -11,8 +11,10 @@
         <link rel="stylesheet" href="src/styles/vars.css">
         <!-- Css -->
         <link rel="stylesheet" href="src/styles/style.css">
-        <!-- main content.css -->
+        <!-- main content css -->
          <link rel="stylesheet" href="src/styles/main-content.css">
+         <!-- footer css -->
+          <link rel="stylesheet" href="src/styles/footer.css">
         <!-- Fonte Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
@@ -110,6 +112,19 @@
                     </nav>
                 </div>
             </main>
+
+            <footer class="disclaimer-premium">
+                <div class="text">
+                    <p class="disclaimer-premium__title">Testar o Premium de graça</p>
+                    <p class="disclaimer-premium__subtitle">
+                        Inscreva-se para curtir música ilimitada e podcasts só com alguns
+                        anúncios. Não precisa de cartão de crédito.
+                    </p>
+                </div>
+                <div class="button">
+                    <button type="button">Inscreva-se grátis</button>
+                </div>
+            </footer>
 
     </body> 
     </html>
