--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -108,10 +108,80 @@
                             <button class="login">Entrar</button>
 
                         </div>
-
                     </nav>
                 </div>
+
+                <div class="playlist-container">
+                    <div id="result-playlists">
+                        <div class="playlist">
+                            <h1 id="greeting">Boas vindas</h1>
+                            <h2 class="section">Navegar por todas as seções</h2>
+                        </div>
+
+                        <!-- LIST DE CARDS -->
+                        <div class="offer__scroll-container">
+                            <div class="offer__list">
+                                <section class="offer__list-item">
+                                    <!-- CARD 1 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card1">
+                                            <img src="src/assets/playlist/1.jpeg" alt="">
+                                            <span>Boas festas</span>
+                                        </div>
+                                    </a>
+
+                                    <!-- CARD 2 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card2">
+                                            <img src="./src/assets/playlist/2.png" alt="" />
+                                            <span>Feitos para você</span>
+                                        </div>
+                                    </a>
+
+                                    <!-- CARD 3 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card3">
+                                            <img src="./src/assets/playlist/3.jpeg" alt="" />
+                                            <span>Lançamentos</span>
+                                        </div>
+                                    </a>
+
+                                    <!-- CARD 4 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card4">
+                                            <img src="./src/assets/playlist/4.jpeg" alt="" />
+                                            <span>Creators</span>
+                                        </div>
+                                    </a>
+
+                                    <!-- CARD 5 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card5">
+                                            <img src="./src/assets/playlist/5.jpeg" alt="" />
+                                            <span>Para treinar</span>
+                                        </div>
+                                    </a>
+
+                                    <!-- CARD 6 -->
+                                    <a href="" class="cards">
+                                        <div class="cards card6">
+                                            <img src="./src/assets/playlist/6.jpeg" alt="" />
+                                            <span>Podcasts</span>
+                                        </div>
+                                    </a>
+
+                                </section>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+
             </main>
+
+            
 
             <footer class="disclaimer-premium">
                 <div class="text">
