--- a/Curso Front End Alura/index.html
+++ b/Curso Front End Alura/index.html
@@ -12,9 +12,13 @@
         <!-- Css -->
         <link rel="stylesheet" href="src/styles/style.css">
         <!-- main content css -->
-         <link rel="stylesheet" href="src/styles/main-content.css">
-         <!-- footer css -->
-          <link rel="stylesheet" href="src/styles/footer.css">
+        <link rel="stylesheet" href="src/styles/main-content.css">
+        <!-- footer css -->
+        <link rel="stylesheet" href="src/styles/footer.css">
+        <!-- Media Queries -->
+        <link rel="stylesheet" href="src/styles/media-queries.css">
+
+        
         <!-- Fonte Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
